# gocortexbrokenbank

./: Dockerfile  Dockerfile.BrokenBank  README.md  app.py  auth_traffic_generator.py  deploy.sh  docker-compose.yml  log_shipping.py  main.py  models.py  pyproject.toml  requirements.txt  vulnerable-requirements.txt
.github/workflows/: container-publish-dockerhub.yaml  container-publish-ghcr.yaml  cortex-cli-code-scan.yml  semgrep.yml
config/: anomaly_seeds.yaml  context.xml  localise.yaml  localise.yaml.kr  logging.yaml  manager-context.xml  supervisord.conf  test_config.yaml  tomcat-users.xml
data/projects/mars-banking-initiative/: .gitignore  README.md
data/projects/mars-banking-initiative/.ssh/: id_rsa  id_rsa.pub
data/projects/mars-banking-initiative/docs/: FINANCIAL_PROJECTIONS.md  PATENT_STRATEGY.md
data/projects/mars-banking-initiative/src/: mars_gateway.py  orbital_auth.py  quantum_ledger.py  space_atm.py
docs/: ENDPOINTS_EXPLOITABILITY.md
exploit-app/: pom.xml
exploit-app/src/main/java/com/gocortex/exploits/: DynamicServlet.java  EvalServlet.java  ExecuteServlet.java  PingServlet.java  Spring4ShellController.java  UploadServlet.java
exploit-app/src/main/resources/: servlet-locale.properties
exploit-app/src/main/webapp/WEB-INF/: spring-context.xml  web.xml
instance/: gocortexbrokenbank.db
k8s/: gocortexbrokenbank.yaml
react-app/: middleware.js  package.json
react-app/app/: actions.js  globals.css  layout.jsx  page.jsx
react-app/scripts/: patch-csrf-origin-check.js  patch-react-server-dom.js
scripts/: generate-servlet-properties.py  log-forwarder.py  react2shell-webshell.py  setup_mars_repo.py  validate-react2shell.py
static/css/: banking-theme.css  style.css
templates/: base.html  business.html  digital.html  disclaimer.html  index.html  investments.html  netbank.html  signup.html
vulnerable_data/: config.py  secrets.py
vulnerable_data/mars_banking_initiative/: README.md  requirements.txt
vulnerable_data/mars_banking_initiative/config/: credentials.json  production.yaml
vulnerable_data/mars_banking_initiative/docs/: MARS-ATM-MAINT.txt  PATENT_STRATEGY.md
vulnerable_data/mars_banking_initiative/src/: __init__.py  mars_gateway.py  orbital_auth.py
vulnerable_data/payloads/src/com/gocortex/payload/: RCEPayload.java
